tests/paczka1/small_fuzzy/72527145.err
Error in line 1: YURxMn S870 45,0
Error in line 7: tNT4MRLPRHK S958 38,2
Error in line 3: VCtMiv2qQ S493 87,5
